test/files/neg/bug633.check
bug633.scala:3: error: not found: type ListBuffer
        def t(a : ListBuffer[String]) = {
                  ^
one error found
